try fix inconsistencies

--- a/notebooks/a_modules/intro.ipynb
+++ b/notebooks/a_modules/intro.ipynb
@@ -104,17 +104,17 @@
     "- {doc}`Fluid Dynamics <notebooks\\mathematics\\moduletags.ipynb>`\n",
     "- {doc}`Timestepping an ODE <notebooks\\mathematics\\moduletags.ipynb>`\n",
     "\n",
-    "module-exstat)=\n",
+    "(module-exstat)=\n",
     "### Excel and Statistics\n",
     "\n",
     "[<!-- module-exstat badge --><span class=\"module module-exstat\">Excel and Statistics</span>](module-exstat)\n",
     "\n",
-    "module-graph)=\n",
+    "(module-graph)=\n",
     "### Graphics\n",
     "\n",
     "[<!-- module-graph badge --><span class=\"module module-graph\">Graphics</span>](module-graph)\n",
     "\n",
-    "module-fieldsk)=\n",
+    "(module-fieldsk)=\n",
     "### Field Skills\n",
     "\n",
     "[<!-- module-fieldsk badge --><span class=\"module module-fieldsk\">Field Skills</span>](module-fieldsk)\n",
@@ -122,59 +122,59 @@
     "\n",
     "## Year 2\n",
     "\n",
-    "module-ssg)=\n",
+    "(module-ssg)=\n",
     "### Solar System Geoscience\n",
     "\n",
     "[<!-- module-ssg badge --><span class=\"module module-ssg\">Solar System Geoscience</span>](module-ssg)\n",
     "\n",
-    "module-htg)=\n",
+    "(module-htg)=\n",
     "### High-Temperature Geochemistry\n",
     "\n",
     "[<!-- module-htg badge --><span class=\"module module-htg\">High-Temperature Geochemistry</span>](module-htg)\n",
     "\n",
-    "module-maps)=\n",
+    "(module-maps)=\n",
     "### Maps and Structures\n",
     "\n",
     "[<!-- module-maps badge --><span class=\"module module-maps\">Maps and Structures</span>](module-maps)\n",
     "\n",
-    "module-puregp)=\n",
+    "(module-puregp)=\n",
     "### Pure Geophysics\n",
     "\n",
     "[<!-- module-puregp badge --><span class=\"module module-puregp\">Pure Geophysics</span>](module-puregp)\n",
     "\n",
-    "module-appgp)=\n",
+    "(module-appgp)=\n",
     "### Applied Geophysics\n",
     "\n",
     "[<!-- module-appgp badge --><span class=\"module module-appgp\">Applied Geophysics</span>](module-appgp)\n",
     "\n",
-    "module-rsitf)=\n",
+    "(module-rsitf)=\n",
     "### Rocks and Structures in the Field\n",
     "\n",
     "[<!-- module-rsitf badge --><span class=\"module module-rsitf\">Rocks and Structures in the Field</span>](module-rsitf)\n",
     "\n",
-    "module-fieldgp)=\n",
+    "(module-fieldgp)=\n",
     "### Field Geophysics\n",
     "\n",
     "[<!-- module-fieldgp badge --><span class=\"module module-fieldgp\">Field Geophysics</span>](module-fieldgp)\n",
     "\n",
     "- {doc}`1D resistivity forward modelling <notebooks\\geosciences\\1D_Resistivity_Forward_Modelling.ipynb>`\n",
     "\n",
-    "module-igg)=\n",
+    "(module-igg)=\n",
     "### Igneous Geology\n",
     "\n",
     "[<!-- module-igg badge --><span class=\"module module-igg\">Igneous Geology</span>](module-igg)\n",
     "\n",
-    "module-metg)=\n",
+    "(module-metg)=\n",
     "### Metamorphic Geology\n",
     "\n",
     "[<!-- module-metg badge --><span class=\"module module-metg\">Metamorphic Geology</span>](module-metg)\n",
     "\n",
-    "module-sedi)=\n",
+    "(module-sedi)=\n",
     "### Sediments\n",
     "\n",
     "[<!-- module-sedi badge --><span class=\"module module-sedi\">Sediments</span>](module-sedi)\n",
     "\n",
-    "module-strat2)=\n",
+    "(module-strat2)=\n",
     "### Stratigraphy (Year 2)\n",
     "\n",
     "[<!-- module-strat2 badge --><span class=\"module module-strat2\">Stratigraphy (Year 2)</span>](module-strat2)\n",
@@ -201,32 +201,32 @@
     "\n",
     "- {doc}`Laplace's \\\\( u_{xx} + u_{yy} = 0 \\\\) <notebooks\\mathematics\\moduletags.ipynb>`\n",
     "\n",
-    "module-mech)=\n",
+    "(module-mech)=\n",
     "### Mechanics\n",
     "\n",
     "[<!-- module-mech badge --><span class=\"module module-mech\">Mechanics</span>](module-mech)\n",
     "\n",
-    "module-wave)=\n",
+    "(module-wave)=\n",
     "### Waves\n",
     "\n",
     "[<!-- module-wave badge --><span class=\"module module-wave\">Waves</span>](module-wave)\n",
     "\n",
-    "module-egacr)=\n",
+    "(module-egacr)=\n",
     "### Environmental Geochemistry and Climate Report\n",
     "\n",
     "[<!-- module-egacr badge --><span class=\"module module-egacr\">Environmental Geochemistry and Climate Report</span>](module-egacr)\n",
     "\n",
-    "module-pala)=\n",
+    "(module-pala)=\n",
     "### Palaeontology\n",
     "\n",
     "[<!-- module-pala badge --><span class=\"module module-pala\">Palaeontology</span>](module-pala)\n",
     "\n",
-    "module-om)=\n",
+    "(module-om)=\n",
     "### Optical Mineralogy\n",
     "\n",
     "[<!-- module-om badge --><span class=\"module module-om\">Optical Mineralogy</span>](module-om)\n",
     "\n",
-    "module-seis)=\n",
+    "(module-seis)=\n",
     "### Seismology\n",
     "\n",
     "[<!-- module-seis badge --><span class=\"module module-seis\">Seismology</span>](module-seis)\n",
@@ -243,12 +243,12 @@
     "\n",
     "## Year 3/4\n",
     "\n",
-    "module-indpmap)=\n",
+    "(module-indpmap)=\n",
     "### Independent Project - Mapping\n",
     "\n",
     "[<!-- module-indpmap badge --><span class=\"module module-indpmap\">Independent Project - Mapping</span>](module-indpmap)\n",
     "\n",
-    "module-indpgp)=\n",
+    "(module-indpgp)=\n",
     "### Independent Project - Geophysics\n",
     "\n",
     "[<!-- module-indpgp badge --><span class=\"module module-indpgp\">Independent Project - Geophysics</span>](module-indpgp)\n",
@@ -258,27 +258,27 @@
     "\n",
     "[<!-- module-indpes badge --><span class=\"module module-indpes\">Independent Project - Earth Science</span>](module-indpes)\n",
     "\n",
-    "module-indpls)=\n",
+    "(module-indpls)=\n",
     "### Independent Project - Landing Site\n",
     "\n",
     "[<!-- module-indpls badge --><span class=\"module module-indpls\">Independent Project - Landing Site</span>](module-indpls)\n",
     "\n",
-    "module-ct)=\n",
+    "(module-ct)=\n",
     "### Continental Tectonics\n",
     "\n",
     "[<!-- module-ct badge --><span class=\"module module-ct\">Continental Tectonics</span>](module-ct)\n",
     "\n",
-    "module-clim)=\n",
+    "(module-clim)=\n",
     "### Climate\n",
     "\n",
     "[<!-- module-clim badge --><span class=\"module module-clim\">Climate</span>](module-clim)\n",
     "\n",
-    "module-nssi)=\n",
+    "(module-nssi)=\n",
     "### Near Surface Seismic Imaging\n",
     "\n",
     "[<!-- module-nssi badge --><span class=\"module module-nssi\">Near Surface Seismic Imaging</span>](module-nssi)\n",
     "\n",
-    "module-ars)=\n",
+    "(module-ars)=\n",
     "### Advanced Remote Sensing\n",
     "\n",
     "[<!-- module-ars badge --><span class=\"module module-ars\">Advanced Remote Sensing</span>](module-ars)\n",
@@ -288,131 +288,131 @@
     "- {doc}`Contrast enhancement <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
     "- {doc}`Balance contrast enhancement technique (BCET)$^2$ <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
     "\n",
-    "module-iafg)=\n",
+    "(module-iafg)=\n",
     "### Integrated Advanced Field Geology\n",
     "\n",
     "[<!-- module-iafg badge --><span class=\"module module-iafg\">Integrated Advanced Field Geology</span>](module-iafg)\n",
     "\n",
-    "module-ored)=\n",
+    "(module-ored)=\n",
     "### Ore Deposits\n",
     "\n",
     "[<!-- module-ored badge --><span class=\"module module-ored\">Ore Deposits</span>](module-ored)\n",
     "\n",
-    "module-mem)=\n",
+    "(module-mem)=\n",
     "### Mining Environmental Management\n",
     "\n",
     "[<!-- module-mem badge --><span class=\"module module-mem\">Mining Environmental Management</span>](module-mem)\n",
     "\n",
-    "module-envsemi)=\n",
+    "(module-envsemi)=\n",
     "### Environmental Seminar\n",
     "\n",
     "[<!-- module-envsemi badge --><span class=\"module module-envsemi\">Environmental Seminar</span>](module-envsemi)\n",
     "\n",
-    "module-astbio)=\n",
+    "(module-astbio)=\n",
     "### Astrobiology\n",
     "\n",
     "[<!-- module-astbio badge --><span class=\"module module-astbio\">Astrobiology</span>](module-astbio)\n",
     "\n",
-    "module-esys)=\n",
+    "(module-esys)=\n",
     "### Earth Systems\n",
     "\n",
     "[<!-- module-esys badge --><span class=\"module module-esys\">Earth Systems</span>](module-esys)\n",
     "\n",
-    "module-gace)=\n",
+    "(module-gace)=\n",
     "### Geological and Coastal Engineering\n",
     "\n",
     "[<!-- module-gace badge --><span class=\"module module-gace\">Geological and Coastal Engineering</span>](module-gace)\n",
     "\n",
-    "module-advprog)=\n",
+    "(module-advprog)=\n",
     "### Advanced Programming\n",
     "\n",
     "[<!-- module-advprog badge --><span class=\"module module-advprog\">Advanced Programming</span>](module-astbio)\n",
     "\n",
-    "module-gmod)=\n",
+    "(module-gmod)=\n",
     "### Gravity, Magnetism, and Orbital Dynamics\n",
     "\n",
     "[<!-- module-gmod badge --><span class=\"module module-gmod\">Gravity, Magnetism, and Orbital Dynamics</span>](module-gmod)\n",
     "\n",
     "- {doc}`Keplerian orbits <notebooks\\geosciences\\Keplerian_Orbits.ipynb>`\n",
     "\n",
-    "module-psdp)=\n",
+    "(module-psdp)=\n",
     "### Practical Seismic Data Processing\n",
     "\n",
     "[<!-- module-psdp badge --><span class=\"module module-psdp\">Practical Seismic Data Processing</span>](module-psdp)\n",
     "\n",
-    "module-plasur)=\n",
+    "(module-plasur)=\n",
     "### Planetary Surfaces\n",
     "\n",
     "[<!-- module-plasur badge --><span class=\"module module-plasur\">Planetary Surfaces</span>](module-plasur)\n",
     "\n",
-    "module-toto)=\n",
+    "(module-toto)=\n",
     "### Tectonics of the Ocean\n",
     "\n",
     "[<!-- module-toto badge --><span class=\"module module-toto\">Tectonics of the Ocean</span>](module-toto)\n",
     "\n",
-    "module-aag)=\n",
+    "(module-aag)=\n",
     "### Advanced Applied Geophysics\n",
     "\n",
     "[<!-- module-aag badge --><span class=\"module module-aag\">Advanced Applied Geophysics</span>](module-aag)\n",
     "\n",
-    "module-hff)=\n",
+    "(module-hff)=\n",
     "### Hydrogeology and Fluid Flow\n",
     "\n",
     "[<!-- module-hff badge --><span class=\"module module-hff\">Hydrogeology and Fluid Flow</span>](module-hff)\n",
     "\n",
-    "module-gfdocean)=\n",
+    "(module-gfdocean)=\n",
     "### Geophysical Fluid Dynamics of the Oceans\n",
     "\n",
     "[<!-- module-gfdocean badge --><span class=\"module module-astbio\">Geophysical Fluid Dynamics of the Oceans</span>](module-gfdocean)\n",
     "\n",
-    "module-mgae)=\n",
+    "(module-mgae)=\n",
     "### Mining Geology and Engineering\n",
     "\n",
     "[<!-- module-mgae badge --><span class=\"module module-mgae\">Mining Geology and Engineering</span>](module-mgae)\n",
     "\n",
-    "module-cps)=\n",
+    "(module-cps)=\n",
     "### Comparative Planetary Science\n",
     "\n",
     "[<!-- module-cps badge --><span class=\"module module-cps\">Comparative Planetary Science</span>](module-cps)\n",
     "\n",
-    "module-dsml)=\n",
+    "(module-dsml)=\n",
     "### Data Science and Machine Learning for Geoscientists\n",
     "\n",
     "[<!-- module-dsml badge --><span class=\"module module-dsml\">Data Science and Machine Learning for Geoscientists</span>](module-dsml)\n",
     "\n",
-    "module-ghaz)=\n",
+    "(module-ghaz)=\n",
     "### Geohazards\n",
     "\n",
     "[<!-- module-ghaz badge --><span class=\"module module-ghaz\">Geohazards</span>](module-ghaz)\n",
     "\n",
-    "module-ageomo)=\n",
+    "(module-ageomo)=\n",
     "### Applied Geomorphology\n",
     "\n",
     "[<!-- module-ageomo badge --><span class=\"module module-ageomo\">Applied Geomorphology</span>](module-ageomo)\n",
     "\n",
-    "module-minep)=\n",
+    "(module-minep)=\n",
     "### Mineral Processing\n",
     "\n",
     "[<!-- module-minep badge --><span class=\"module module-minep\">Mineral Processing</span>](module-minep)\n",
     "\n",
-    "module-aes)=\n",
+    "(module-aes)=\n",
     "### Advanced Exploration Seismology\n",
     "\n",
     "[<!-- module-aes badge --><span class=\"module module-aes\">Advanced Exploration Seismology</span>](module-aes)\n",
     "\n",
-    "module-fgamb)=\n",
+    "(module-fgamb)=\n",
     "### Field Geology of an Active Mountain Belt\n",
     "\n",
     "[<!-- module-fgamb badge --><span class=\"module module-fgamb\">Field Geology of an Active Mountain Belt</span>](module-fgamb)\n",
     "\n",
-    "module-ginv)=\n",
+    "(module-ginv)=\n",
     "### Geophysical Inversion\n",
     "\n",
     "[<!-- module-ginv badge --><span class=\"module module-ginv\">Geophysical Inversion</span>](module-ginv)\n",
     "\n",
     "- {doc}`Eigenvalues <notebooks\\mathematics\\moduletags.ipynb>`\n",
     "\n",
-    "module-gdyn)=\n",
+    "(module-gdyn)=\n",
     "### Geodynamics\n",
     "\n",
     "[<!-- module-gdyn badge --><span class=\"module module-gdyn\">Geodynamics</span>](module-gdyn)\n",
@@ -420,47 +420,47 @@
     "- {doc}`1D heat conduction (layered medium) <notebooks\\geosciences\\1D_Heat_Conduction.ipynb>`\n",
     "- {doc}`1D pipe flow <notebooks\\geosciences\\Lecture5_1D_Pipe_Flow.ipynb>`\n",
     "\n",
-    "module-cac)=\n",
+    "(module-cac)=\n",
     "### Collisions and Craters\n",
     "\n",
     "[<!-- module-cac badge --><span class=\"module module-cac\">Collisions and Craters</span>](module-cac)\n",
     "\n",
-    "module-ampap)=\n",
+    "(module-ampap)=\n",
     "### Arc Magmatic Processes and Products\n",
     "\n",
     "[<!-- module-ampap badge --><span class=\"module module-ampap\">Arc Magmatic Processes and Products</span>](module-ampap)\n",
     "\n",
-    "module-grt)=\n",
+    "(module-grt)=\n",
     "### Geological Reactive transport\n",
     "\n",
     "[<!-- module-grt badge --><span class=\"module module-grt\">Geological Reactive transport</span>](module-grt)\n",
     "\n",
-    "module-palabio)=\n",
+    "(module-palabio)=\n",
     "### Palaeobiology\n",
     "\n",
     "[<!-- module-palabio badge --><span class=\"module module-palabio\">Palaeobiology</span>](module-palabio)\n",
     "\n",
-    "module-palaocean)=\n",
+    "(module-palaocean)=\n",
     "### Palaeoceanography\n",
     "\n",
     "[<!-- module-palaocean badge --><span class=\"module module-palaocean\">Palaeoceanography</span>](module-palaocean)\n",
     "\n",
-    "module-gagp)=\n",
+    "(module-gagp)=\n",
     "### Geophysical Synthesis Group Project\n",
     "\n",
     "[<!-- module-gagp badge --><span class=\"module module-gagp\">Geophysical Synthesis Group Project</span>](module-gagp)\n",
     "\n",
-    "module-plaphy)=\n",
+    "(module-plaphy)=\n",
     "### Planetary Physics\n",
     "\n",
     "[<!-- module-plaphy badge --><span class=\"module module-plaphy\">Planetary Physics</span>](module-plaphy)\n",
     "\n",
-    "module-plachem)=\n",
+    "(module-plachem)=\n",
     "### Planetary Chemistry\n",
     "\n",
     "[<!-- module-plachem badge --><span class=\"module module-plachem\">Planetary Chemistry</span>](module-plachem)\n",
     "\n",
-    "module-meteo)=\n",
+    "(module-meteo)=\n",
     "### Meteorites\n",
     "\n",
     "[<!-- module-meteo badge --><span class=\"module module-meteo\">Meteorites</span>](module-meteo)\n"
