try fix consistencies

--- a/notebooks/d_geosciences/Physical Processes/Dimensional_Analysis.ipynb
+++ b/notebooks/d_geosciences/Physical Processes/Dimensional_Analysis.ipynb
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem 2 – Centripetal force\n",
+    "## Problem 2 – Centripetal force\n",
     "\n",
     "The tension in a string as a mass is twirled around in a horizontal circle, or the gravitational force that keeps a satellite in a circular orbit, is called the centripetal force. Use dimensional analysis to determine how this force $F$ is related to the mass of the object $m$, its speed in its orbit $v$, and the radius of that orbit $r$. That is, find $a$, $b$ and $c$ if:\n",
     "\n",
@@ -262,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem 4 – Tsunami waves\n",
+    "## Problem 4 – Tsunami waves\n",
     "\n",
     "Tsunamis are produced by very long-period waves in the ocean that are initiated by a sudden change in the position of the sea surface, caused for example by a submarine earthquake or landslide. Gravity acts to restore the sea-surface to the horizontal, and the resulting movement of water propagates as a wave. \n",
     "\n",
