--- a/notebooks/d_geosciences/Physical Processes/Fluids_&_the_Bernoulli_effect.ipynb
+++ b/notebooks/d_geosciences/Physical Processes/Fluids_&_the_Bernoulli_effect.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 3\n",
+    "## Question 3\n",
     "\n",
     "If you blow across the top of a pile of sugar grains, the Bernoulli effect lifts the sugar off the pile. Approximately how fast do you need to blow? You will need to estimate the density of sugar and the dimensions of a sugar grain to do this."
    ]
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 4\n",
+    "## Question 4\n",
     "\n",
     "A silt particle, a sand grain, a small pebble and a large cobble each sits on a river bed. Approximately how fast must the river flow over each of these to lift the object from the river bed?\n",
     "\n",
