--- a/notebooks/a_modules/continental_tectonics/Ridge_Push_and_Slab_Pull.ipynb
+++ b/notebooks/a_modules/continental_tectonics/Ridge_Push_and_Slab_Pull.ipynb
@@ -8,9 +8,9 @@
     ]
    },
    "source": [
-    "(Ridge Push and Slab Pull)=\n",
-    "\n",
-    "# Ridge Push and Slab Pull"
+    "# Ridge Push and Slab Pull\n",
+    "```{index} Ridge Push and Slab Pull\n",
+    "```"
    ]
   },
   {
