--- a/a_modules/continental_tectonics/Euler_Pole.ipynb
+++ b/a_modules/continental_tectonics/Euler_Pole.ipynb
@@ -9,8 +9,9 @@
     ]
    },
    "source": [
-    "(Euler_pole)=\n",
-    "# Euler Pole"
+    "# Euler Pole\n",
+    "```{index} Euler Pole\n",
+    "```"
    ]
   },
   {
