--- a/a_modules/continental_tectonics/Isostasy.ipynb
+++ b/a_modules/continental_tectonics/Isostasy.ipynb
@@ -8,9 +8,9 @@
     ]
    },
    "source": [
-    "(Isostasy)=\n",
-    "\n",
-    "# Isostasy"
+    "# Isostasy\n",
+    "```{index} Isostasy\n",
+    "```"
    ]
   },
   {
