--- a/a_modules/continental_tectonics/Lithospheric_Strength.ipynb
+++ b/a_modules/continental_tectonics/Lithospheric_Strength.ipynb
@@ -8,9 +8,9 @@
     ]
    },
    "source": [
-    "(Lithospheric Strength)=\n",
-    "\n",
-    "# Lithospheric Strength"
+    "# Lithospheric Strength\n",
+    "```{index} Lithospheric Strength\n",
+    "```"
    ]
   },
   {
