delete some (...)= above titles and add indices

--- a/notebooks/a_modules/math_methods_1/1_Coordinate_Systems.ipynb
+++ b/notebooks/a_modules/math_methods_1/1_Coordinate_Systems.ipynb
@@ -31,8 +31,9 @@
     ]
    },
    "source": [
-    "(Coordinate_systems)=\n",
-    "# Coordinate systems (Lecture 1)\n",
+    "# Coordinate systems\n",
+    "```{index} Coordinate systems\n",
+    "```\n",
     "\n",
     "This notebook will illustrate how to apply the maths discussed in the lecture using Python.\n",
     "\n",
