--- a/notebooks/a_modules/math_methods_1/2_Vectors.ipynb
+++ b/notebooks/a_modules/math_methods_1/2_Vectors.ipynb
@@ -71,8 +71,9 @@
     ]
    },
    "source": [
-    "(Vectors)=\n",
-    "# Vectors (Lecture 1)\n",
+    "# Vectors\n",
+    "```{index} Vectors\n",
+    "```\n",
     "\n",
     "This notebook will illustrate how to apply the maths discussed in the lecture using Python.\n",
     "\n",
