--- a/notebooks/a_modules/math_methods_1/3_Multivariable_Calculus.ipynb
+++ b/notebooks/a_modules/math_methods_1/3_Multivariable_Calculus.ipynb
@@ -8,8 +8,9 @@
     ]
    },
    "source": [
-    "(Multivariable_calculus)=\n",
-    "# Multivariable calculus (Lecture 2)"
+    "# Multivariable calculus\n",
+    "```{index} Multivariable calculus\n",
+    "```"
    ]
   },
   {
