--- a/notebooks/a_modules/math_methods_1/4_Vector_Calculus.ipynb
+++ b/notebooks/a_modules/math_methods_1/4_Vector_Calculus.ipynb
@@ -8,8 +8,9 @@
     ]
    },
    "source": [
-    "(Vector_calculus)=\n",
-    "# Vector calculus (Lecture 3)"
+    "# Vector calculus\n",
+    "```{index} Vector calculus\n",
+    "```"
    ]
   },
   {
