--- a/notebooks/a_modules/math_methods_1/5_Matrices.ipynb
+++ b/notebooks/a_modules/math_methods_1/5_Matrices.ipynb
@@ -8,9 +8,9 @@
     ]
    },
    "source": [
-    "(Matrices)=\n",
-    "# Matrices (Lecture 4)\n",
-    "\n",
+    "# Matrices\n",
+    "```{index} Matrices\n",
+    "```\n",
     "```{thebe-button}\n",
     "```"
    ]
