--- a/notebooks/a_modules/math_methods_1/6_Eigenvalues.ipynb
+++ b/notebooks/a_modules/math_methods_1/6_Eigenvalues.ipynb
@@ -8,8 +8,10 @@
     ]
    },
    "source": [
-    "(Eigenvalues)=\n",
-    "# Eigenvalues (Lecture 5)"
+    "# Eigenvalues\n",
+    "\n",
+    "```{index} Eigenvalues\n",
+    "```"
    ]
   },
   {
