--- a/notebooks/a_modules/math_methods_1/7_Series.ipynb
+++ b/notebooks/a_modules/math_methods_1/7_Series.ipynb
@@ -8,8 +8,9 @@
     ]
    },
    "source": [
-    "(Series)=\n",
-    "# Series (Lecture 6)"
+    "# Series\n",
+    "```{index} Series\n",
+    "```"
    ]
   },
   {
