--- a/notebooks/a_modules/math_methods_1/8_ODEs.ipynb
+++ b/notebooks/a_modules/math_methods_1/8_ODEs.ipynb
@@ -8,8 +8,9 @@
     ]
    },
    "source": [
-    "(ODEs)=\n",
-    "# ODEs (Lecture 7)"
+    "# ODEs\n",
+    "```{index} ODEs\n",
+    "```"
    ]
   },
   {
