--- a/notebooks/a_modules/math_methods_1/9_Modelling.ipynb
+++ b/notebooks/a_modules/math_methods_1/9_Modelling.ipynb
@@ -8,8 +8,9 @@
     ]
    },
    "source": [
-    "(Modelling)=\n",
-    "# Modelling (Lecture 8)"
+    "# Modelling\n",
+    "```{index} Modelling\n",
+    "```"
    ]
   },
   {
