--- a/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
+++ b/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
@@ -8,9 +8,9 @@
     ]
    },
    "source": [
-    "(Complex Numbers)=\n",
-    "\n",
-    "# Complex Numbers"
+    "# Complex Numbers\n",
+    "```{index} Complex Numbers\n",
+    "```"
    ]
   },
   {
