--- a/notebooks/a_modules/mechanics/1_Motion_in_1D.ipynb
+++ b/notebooks/a_modules/mechanics/1_Motion_in_1D.ipynb
@@ -8,8 +8,9 @@
     ]
    },
    "source": [
-    "(motion_in_1d)=\n",
-    "# Motion in 1D"
+    "# Motion in 1D\n",
+    "```{index} Motion in 1D\n",
+    "```"
    ]
   },
   {
