--- a/notebooks/a_modules/mechanics/2_Motion_in_2D.ipynb
+++ b/notebooks/a_modules/mechanics/2_Motion_in_2D.ipynb
@@ -8,8 +8,9 @@
     ]
    },
    "source": [
-    "(motion_in_2d)=\n",
-    "# Motion in 2D"
+    "# Motion in 2D\n",
+    "```{index} Motion in 2D\n",
+    "```"
    ]
   },
   {
