--- a/notebooks/a_modules/mechanics/3_Work_and_Energy.ipynb
+++ b/notebooks/a_modules/mechanics/3_Work_and_Energy.ipynb
@@ -8,8 +8,9 @@
     ]
    },
    "source": [
-    "(work_and_energy)=\n",
-    "# Work and Energy "
+    "# Work and Energy \n",
+    "```{index} Work and Energy\n",
+    "```"
    ]
   },
   {
