--- a/notebooks/a_modules/mechanics/4_Rotational_Motion.ipynb
+++ b/notebooks/a_modules/mechanics/4_Rotational_Motion.ipynb
@@ -8,9 +8,9 @@
     ]
    },
    "source": [
-    "(rotational_motion)=\n",
-    "\n",
-    "# Rotational Motion\n"
+    "# Rotational Motion\n",
+    "```{index} Rotational Motion\n",
+    "```"
    ]
   },
   {
