--- a/notebooks/a_modules/mechanics/5_Gravity.ipynb
+++ b/notebooks/a_modules/mechanics/5_Gravity.ipynb
@@ -8,9 +8,9 @@
     ]
    },
    "source": [
-    "(gravity)=\n",
-    "\n",
-    "# Gravity"
+    "# Gravity\n",
+    "```{index} Gravity\n",
+    "```"
    ]
   },
   {
