--- a/notebooks/a_modules/seismology/CMP_Common_Mid_Point_Gather.ipynb
+++ b/notebooks/a_modules/seismology/CMP_Common_Mid_Point_Gather.ipynb
@@ -9,9 +9,9 @@
     ]
    },
    "source": [
-    "(Common Mid-point Gather)=\n",
-    "\n",
-    "# Common Mid-point Gather"
+    "# Common Mid-point Gather\n",
+    "```{index} Common Mid-point Gather\n",
+    "```"
    ]
   },
   {
