--- a/notebooks/a_modules/seismology/Ghosting.ipynb
+++ b/notebooks/a_modules/seismology/Ghosting.ipynb
@@ -9,9 +9,9 @@
     ]
    },
    "source": [
-    "(Ghosting)=\n",
-    "\n",
-    "# Ghosting"
+    "# Ghosting\n",
+    "```{index} Ghosting\n",
+    "```"
    ]
   },
   {
