--- a/notebooks/a_modules/seismology/Spatial_aliasing.ipynb
+++ b/notebooks/a_modules/seismology/Spatial_aliasing.ipynb
@@ -9,9 +9,9 @@
     ]
    },
    "source": [
-    "(Spatial Aliasing)=\n",
-    "\n",
-    "# Spatial Aliasing"
+    "# Spatial Aliasing\n",
+    "```{index} Spatial Aliasing\n",
+    "```"
    ]
   },
   {
