--- a/notebooks/a_modules/seismology/Temporal_aliasing.ipynb
+++ b/notebooks/a_modules/seismology/Temporal_aliasing.ipynb
@@ -9,9 +9,9 @@
     ]
    },
    "source": [
-    "(Temporal Aliasing)=\n",
-    "\n",
-    "# Temporal Aliasing"
+    "# Temporal Aliasing\n",
+    "```{index} Temporal Aliasing\n",
+    "```"
    ]
   },
   {
