--- a/notebooks/a_modules/tectonics_of_the_ocean/Latitude_Longitude_and_Degree_Notation.ipynb
+++ b/notebooks/a_modules/tectonics_of_the_ocean/Latitude_Longitude_and_Degree_Notation.ipynb
@@ -9,9 +9,9 @@
     ]
    },
    "source": [
-    "(Reading Maps)=\n",
-    "\n",
-    "# Reading Maps"
+    "# Reading Maps\n",
+    "```{index} Reading Maps\n",
+    "```"
    ]
   },
   {
