--- a/notebooks/a_modules/tectonics_of_the_ocean/Plate_Models.ipynb
+++ b/notebooks/a_modules/tectonics_of_the_ocean/Plate_Models.ipynb
@@ -8,9 +8,9 @@
     ]
    },
    "source": [
-    "(Heat Flow)=\n",
-    "\n",
-    "# Heat Flow"
+    "# Heat Flow\n",
+    "```{index} Heat Flow\n",
+    "```"
    ]
   },
   {
