--- a/notebooks/b_coding/Intro to Python/11_Functions.ipynb
+++ b/notebooks/b_coding/Intro to Python/11_Functions.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(functions_python)=\n",
     "# Creating custom functions\n",
-    "``` {index} Creating functions (python)\n",
+    "``` {index} Creating functions (Python)\n",
     "```\n",
     "Functions in Python are blocks of code that will only be executed when called. They look like this:\n",
     "\n",
