--- a/notebooks/b_coding/Intro to Python/14_Dictionaries.ipynb
+++ b/notebooks/b_coding/Intro to Python/14_Dictionaries.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(dictionaries)=\n",
     "# Dictionaries\n",
-    "``` {index} Dictionaries (python)\n",
+    "``` {index} Dictionaries (Python)\n",
     "```\n",
     "A dictionary is a Python data structure that can store data as key-value pairs. The syntax is:\n",
     "\n",
