--- a/notebooks/b_coding/Intro to Python/17_Matplotlib.ipynb
+++ b/notebooks/b_coding/Intro to Python/17_Matplotlib.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(matplotlib_intro)=\n",
     "# Plotting data with Matplotlib\n",
-    "``` {index} Matplotlib plotting (python)\n",
+    "``` {index} Matplotlib (Python)\n",
     "```\n",
     "``` {thebe-button} Tun on live code\n",
     "```\n",
