--- a/notebooks/b_coding/Intro to Python/18_Assert.ipynb
+++ b/notebooks/b_coding/Intro to Python/18_Assert.ipynb
@@ -9,8 +9,9 @@
     ]
    },
    "source": [
-    "(assert)=\n",
     "# Assert \n",
+    "``` {index} Assert (Python)\n",
+    "```\n",
     "\n",
     "Assert statement allows us to do sanity checks in our code. It is also a very handy tool in preventing bugs that do not throw an `Error`. Consider the following factorial function:\n"
    ]
