--- a/notebooks/b_coding/Intro to Python/19_Classes.ipynb
+++ b/notebooks/b_coding/Intro to Python/19_Classes.ipynb
@@ -9,8 +9,9 @@
     ]
    },
    "source": [
-    "(classes)=\n",
     "# Python classes\n",
+    "``` {index} Classes (Python)\n",
+    "```\n",
     "\n",
     "A very popular concept in Computer Science is *an object*. Objects are theoretical entities that may contain data (*fields*) as well as specific functionalities (*methods*). Classes in Python provide a means of implementing *types* objects. \n",
     "\n",
