--- a/notebooks/b_coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
+++ b/notebooks/b_coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
@@ -9,8 +9,9 @@
     ]
    },
    "source": [
-    "(printing_intro)=\n",
     "# Printing and formatting statements\n",
+    "``` {index} Printing and formatting statements (Python)\n",
+    "```\n",
     "\n",
     "## Basic printing\n",
     "\n",
