--- a/notebooks/b_coding/Intro to Python/20_Lambdas.ipynb
+++ b/notebooks/b_coding/Intro to Python/20_Lambdas.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(lambdas)=\n",
     "# Lambdas\n",
-    "``` {index} Lambdas\n",
+    "``` {index} Lambdas (Python)\n",
     "```\n",
     "Lambdas are a way of defining small anonymous functions in Python. The name stems from functional programming. Anonymous means that these functions do not have a name. These functions can be treated as variables in a sense."
    ]
