--- a/notebooks/b_coding/Intro to Python/2_Variables.ipynb
+++ b/notebooks/b_coding/Intro to Python/2_Variables.ipynb
@@ -9,8 +9,9 @@
     ]
    },
    "source": [
-    "(variables)=\n",
     "# Variables\n",
+    "``` {index} Variables (Python)\n",
+    "```\n",
     "\n",
     "A variable is an object that contains an assigned value:"
    ]
