--- a/notebooks/b_coding/Intro to Python/3_If_statement.ipynb
+++ b/notebooks/b_coding/Intro to Python/3_If_statement.ipynb
@@ -9,8 +9,9 @@
     ]
    },
    "source": [
-    "(if_statement)=\n",
     "# If statement\n",
+    "``` {index} If (Python)\n",
+    "```\n",
     "\n",
     "`if` construct allows to create cases in the code based on conditions:\n",
     "\n",
