--- a/notebooks/b_coding/Intro to Python/4_While_loops.ipynb
+++ b/notebooks/b_coding/Intro to Python/4_While_loops.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(while_loops)=\n",
     "# While loops\n",
-    "``` {index} Loops: while loops\n",
+    "``` {index} Loops: while loops (Python)\n",
     "```\n",
     "`while` loops repeat instructions until certain condition is `False` (while the condition is `True`). The syntax is as follows:\n",
     "    \n",
