--- a/notebooks/b_coding/Intro to Python/5_Lists.ipynb
+++ b/notebooks/b_coding/Intro to Python/5_Lists.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(lists)=\n",
     "# Lists\n",
-    "``` {index} Lists (python)\n",
+    "``` {index} Lists (Python)\n",
     "```\n",
     "A list is an object that contains multiple elements in defined order (called an **index** number). The syntax is:\n",
     "\n",
