--- a/notebooks/b_coding/Intro to Python/6_For_loops.ipynb
+++ b/notebooks/b_coding/Intro to Python/6_For_loops.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(for_loops)=\n",
     "# For loops\n",
-    "``` {index} For loop (python)\n",
+    "``` {index} For loop (Python)\n",
     "```\n",
     "`for` loops are used to iterate over elements in a list (or any other iterable object). Iterating means looping over. The syntax for this type of loop is:\n",
     "\n",
