--- a/notebooks/b_coding/Intro to Python/7_List_comprehensions.ipynb
+++ b/notebooks/b_coding/Intro to Python/7_List_comprehensions.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(list_comprehensions)=\n",
     "# List comprehensions\n",
-    "``` {index} List comprehensions (python)\n",
+    "``` {index} List comprehensions (Python)\n",
     "```\n",
     "List comprehensions are 'shortcuts' in creating lists using loops within one statement. The main advantage is that they are shorter to write. The syntax is:\n",
     "\n",
