--- a/notebooks/b_coding/Intro to Python/8_Nested_lists.ipynb
+++ b/notebooks/b_coding/Intro to Python/8_Nested_lists.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(nested_lists)=\n",
     "# Nested lists\n",
-    "``` {index} Nested lists (python)\n",
+    "``` {index} Nested lists (Python)\n",
     "```\n",
     "Lists can contain elements which are also lists."
    ]
