--- a/notebooks/b_coding/Intro to Python/9_Handling_errors.ipynb
+++ b/notebooks/b_coding/Intro to Python/9_Handling_errors.ipynb
@@ -9,8 +9,10 @@
     ]
    },
    "source": [
-    "(handling_errors)=\n",
     "# Handling errors\n",
+    "``` {index} Handling errors (Python)\n",
+    "```\n",
+    "\n",
     "When an _error_ occurs in Python, an _exception_ is _raised_. \n",
     "\n",
     "(error_types)=\n",
