--- a/notebooks/b_coding/Intro to Python/10_Importing.ipynb
+++ b/notebooks/b_coding/Intro to Python/10_Importing.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(importing)=\n",
     "# Importing in Python\n",
-    "``` {index} Importing modules (python)\n",
+    "``` {index} Importing modules (Python)\n",
     "```\n",
     "Python's growing popularity over the years has inevitably lead to the development of thousands of excellent libraries and python-based frameworks. This section will cover the basics of importing them, but also cover how to import your own classes, functions and much more.\n",
     "\n",
