--- a/notebooks/b_coding/Intro to Python/13_File_handling.ipynb
+++ b/notebooks/b_coding/Intro to Python/13_File_handling.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(file_handling)=\n",
     "# File handling\n",
-    "``` {index} File handling\n",
+    "``` {index} File handling (Python)\n",
     "```\n",
     "Suppose we have a text file like below, from which we would like to extract temperature and density data:\n",
     "\n",
