--- a/notebooks/b_coding/Intro to Python/15_Flow_control_statements.ipynb
+++ b/notebooks/b_coding/Intro to Python/15_Flow_control_statements.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(flow_control_statements)=\n",
     "# Flow control statements\n",
-    "``` {index} Break and continue statements (python)\n",
+    "``` {index} Break and continue statements (Python)\n",
     "```\n",
     "(break_continue)=\n",
     "## Break and continue statements\n",
