--- a/notebooks/b_coding/Pandas/4_summary_statistics.ipynb
+++ b/notebooks/b_coding/Pandas/4_summary_statistics.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "(pandas_stats)=\n",
     "# Summary statistics\n",
-    "``` {index} Pandas: summary stats\n",
+    "``` {index} Pandas: summary statistics\n",
     "```\n",
     "Pandas have built-in functions that can calculate simple statistics:\n",
     "\n",
