--- a/notebooks/b_coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/notebooks/b_coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(version_control_git)=\n",
     "# Version control Git\n",
+    "```{index} Version control Git\n",
+    "```\n",
     "\n",
     "As a future researcher, professional or enthusiast you will find out that maintaining a high standard of code is a considerable challenge. This can get even harder when multiple programmers are involved. Coding can be very rewarding, but it is also full of pitfalls and requires a *trial-and-error* approach.  \n",
     "\n",
@@ -501,7 +502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
