return some (...)= back

--- a/notebooks/b_coding/Fundamentals of Computer Science/1_Algorithmic_Complexity.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/1_Algorithmic_Complexity.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Algorithmic complexity)=\n",
     "# Algorithmic complexity\n",
     "``` {index} Algorithmic Complexity\n",
     "```\n",
