--- a/notebooks/b_coding/Fundamentals of Computer Science/2_Recursion.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/2_Recursion.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Recursion)=\n",
     "# Recursion\n",
     "``` {index} Recursion\n",
     "```\n",
