--- a/notebooks/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Divide and conquer)=\n",
     "# Divide and Conquer\n",
     "``` {index} Divide and Conquer\n",
     "```\n",
