--- a/notebooks/b_coding/Fundamentals of Computer Science/6_Data_Structures.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/6_Data_Structures.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Data structures)=\n",
     "# Data Structures\n",
     "``` {index} Data Structures\n",
     "```\n",
