--- a/notebooks/b_coding/Fundamentals of Computer Science/7_Graph_Algorithms.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/7_Graph_Algorithms.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Graph algorithms)=\n",
     "# Graph Algorithms\n",
     "``` {index} Graph Algorithms\n",
     "```\n"
