--- a/notebooks/b_coding/Fundamentals of Computer Science/4_Dynamic_Programming.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/4_Dynamic_Programming.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Dynamic programming)=\n",
     "# Dynamic Programming\n",
     "``` {index} Dynamic Programming\n",
     "```\n",
