--- a/notebooks/b_coding/Fundamentals of Computer Science/5_Greedy_Algorithms.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/5_Greedy_Algorithms.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Greedy algorithms)=\n",
+    "(Greedy_algorithms)=\n",
     "# Greedy Algorithms\n",
     "``` {index} Greedy Algorithms\n",
     "```\n",
