--- a/_sources/b_coding/Fundamentals of Computer Science/1_Algorithmic_Complexity.ipynb
+++ b/_sources/b_coding/Fundamentals of Computer Science/1_Algorithmic_Complexity.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Algorithmic complexity)=\n",
+    "(Algorithmic_complexity)=\n",
     "# Algorithmic complexity\n",
     "``` {index} Algorithmic Complexity\n",
     "```\n",
